<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>stat</artifactId>
  <groupId>dk.alexandra.fresco</groupId>
  <modelVersion>4.0.0</modelVersion>

  <modules>
    <module>demo</module>
    <module>core</module>
  </modules>

  <name>FRESCO-stat</name>
  <description>
    Library for secure statistics and linear algebra on data held by multiple parties without sharing the data with the other parties.
  </description>
  <url>https://github.com/alexandrainst/fresco-stat</url>

  <licenses>
    <license>
      <name>MIT-License</name>
      <url>https://github.com/alexandrainst/fresco-stat/blob/master/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>FRESCO team</name>
      <email>fresco@alexandra.dk</email>
      <organization>The Alexandra Institute</organization>
      <organizationUrl>https://alexandra.dk</organizationUrl>
    </developer>
  </developers>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.22.2</version>
      </plugin>
    </plugins>
  </build>

  <packaging>pom</packaging>

  <properties>
    <fresco.version>1.3.1-SNAPSHOT</fresco.version>
    <maven.compiler.source>9</maven.compiler.source>
    <maven.compiler.target>9</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>0.2-SNAPSHOT</version>

</project>